# tree-sitter-mojo

./: .gitattributes  .gitignore  .npmignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: tree_sitter_maker.yml
bindings/c/: tree-sitter-mojo.pc.in
bindings/go/: binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_mojo/: __init__.py  binding.c
bindings/rust/: README.md  build.rs  lib.rs
examples/: mixed-spaces-tabs.py  mojo2-grammar-crlf.py  mojo2-grammar.py  mojo3-grammar-crlf.py  mojo3-grammar.py  mojo3.8_grammar.py
queries/: highlights.scm
runtime/queries/mojo/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: statements.txt
types/: dsl.d.ts
